--- a/resources/src/main/res/values/themes.xml
+++ b/resources/src/main/res/values/themes.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <style name="Theme.HabitTracker" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/purple_700</item>
+        <item name="android:statusBarColor">#512da8</item>
     </style>
 </resources>
